// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TextField Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rd:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rc:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rc:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:rb:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAs play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rj:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ri:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:ri:"
              class="_textbox_1b2vd_5  _textbox_multiline_1b2vd_31"
              autocomplete="off"
    >
    </textarea>
    <div id="textFieldErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r5:"
           class="_label_348na_5"
           for="htmlid"
    >
      Navn
    </label>
    <input id="htmlid"
           class="_textbox_1b2vd_5"
           data-testid="123ID"
           autocomplete="off"
           form="formid123"
           value
    >
    <div id="textFieldErrorId-:r3:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAutoCompleteInputModeNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r15:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r14:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r14:"
           class="_textbox_1b2vd_5"
           autocomplete="given-name"
           inputmode="text"
           name="test_name"
           placeholder="Kari Nordmann"
           value
    >
    <div id="textFieldErrorId-:r13:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithControlledValueAndAutoSizeTextArea play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r36:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r35:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:r35:"
              class="_textbox_1b2vd_5  _textbox_multiline_1b2vd_31 _textbox_autosize_1b2vd_35"
              autocomplete="off"
              style="height: 64px;"
    >
    </textarea>
    <div id="textFieldErrorId-:r34:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Nullstill
    </span>
  </button>
</div>
`;

exports[`Tester/TextField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:r8:"
           class="_label_348na_5    dummyClassname"
           for="textFieldTextboxId-:r7:"
    >
      Navn
    </label>
    <button class="_button_1vm3o_1 _button_extraSmall_1vm3o_33 _button_outlined_1vm3o_116 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r8:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1vm3o_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r9:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r9:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17   dummyClassname">
      beskrivelse
    </div>
    <input id="textFieldTextboxId-:r7:"
           class="_textbox_1b2vd_5    dummyClassname"
           autocomplete="off"
           aria-describedby="textFieldErrorId-:r6:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r6:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1kdf4_15 dummyClassname">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1kdf4_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1kdf4_30">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDataList play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r33:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r32:"
    >
      nettlesere
    </label>
    <input id="textFieldTextboxId-:r32:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           list="browsers"
           value
    >
    <div id="textFieldErrorId-:r31:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <datalist id="browsers">
    <option value="Edge">
    </option>
    <option value="Firefox">
    </option>
    <option value="Chrome">
    </option>
    <option value="Opera">
    </option>
    <option value="Safari">
    </option>
  </datalist>
</div>
`;

exports[`Tester/TextField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rs:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rr:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rr:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rq:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndAutoSizeTextArea play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r12:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r11:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:r11:"
              class="_textbox_1b2vd_5  _textbox_multiline_1b2vd_31 _textbox_autosize_1b2vd_35"
              autocomplete="off"
              style="height: 88px;"
    >
      Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
    </textarea>
    <div id="textFieldErrorId-:r10:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rv:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ru:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:ru:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value="10 000"
    >
    <div id="textFieldErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r21:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r20:"
    >
      Navn
    </label>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r20:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:r1v:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rm:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rl:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rl:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           disabled
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rk:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1t:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1s:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1s:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           aria-describedby="textFieldErrorId-:r1r:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r1r:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1kdf4_15 ">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1kdf4_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1kdf4_30">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2n:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2m:"
    >
      TextField har blitt blurret
    </label>
    <input id="textFieldTextboxId-:r2m:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:r2l:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2d:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2c:"
    >
      Navn
    </label>
    <button class="_button_1vm3o_1 _button_extraSmall_1vm3o_33 _button_outlined_1vm3o_116 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r2d:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1vm3o_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2e:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2e:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r2c:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:r2b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpTextAndDescription smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2i:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2h:"
    >
      Navn
    </label>
    <button class="_button_1vm3o_1 _button_extraSmall_1vm3o_33 _button_outlined_1vm3o_116 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r2i:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1vm3o_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2j:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2j:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r2h:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:r2g:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2q:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2p:"
    >
      Navn
    </label>
    <button class="_button_1vm3o_1 _button_extraSmall_1vm3o_33 _button_outlined_1vm3o_116 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r2q:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1vm3o_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2r:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2r:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r2p:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:r2o:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r24:"
           class="_label_348na_5  _srOnly_348na_18"
           for="textFieldTextboxId-:r23:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r23:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:r22:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithMinAndMaxLength play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1h:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1g:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1g:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           maxlength="50"
           minlength="10"
           value
    >
    <div id="textFieldErrorId-:r1f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithPattern play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1k:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1j:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1j:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           pattern="[a-z]"
           value
    >
    <div id="textFieldErrorId-:r1i:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r18:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r17:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r17:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           readonly
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:r16:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
           name="dummyNameForwardedFromRef"
    >
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1b:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1a:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1a:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           required
           value
    >
    <div id="textFieldErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1e:"
           class="_label_348na_5 _label_required_348na_12"
           for="textFieldTextboxId-:r1d:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1d:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           required
           value
    >
    <div id="textFieldErrorId-:r1c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRows play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1n:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1m:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:r1m:"
              class="_textbox_1b2vd_5  _textbox_multiline_1b2vd_31"
              autocomplete="off"
              rows="4"
    >
    </textarea>
    <div id="textFieldErrorId-:r1l:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithTextAreaAutoSizeInModal play-test 1`] = `
<div data-test-block="true">
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Vis modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:r2s:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1vm3o_1 _button_medium_1vm3o_49  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1vm3o_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2t:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2t:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r2s:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Modal med textarea
        </h1>
        <div class>
          <label id="labelId-:r30:"
                 class="_label_348na_5"
                 for="textFieldTextboxId-:r2v:"
          >
            Navn
          </label>
          <textarea id="textFieldTextboxId-:r2v:"
                    class="_textbox_1b2vd_5  _textbox_multiline_1b2vd_31 _textbox_autosize_1b2vd_35"
                    autocomplete="off"
                    style="height: 0px;"
          >
          </textarea>
          <div id="textFieldErrorId-:r2u:"
               aria-live="assertive"
               aria-atomic="true"
          >
          </div>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/TextField WithThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r27:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r26:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r26:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:r25:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparatorAndNegativeValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2a:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r29:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r29:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:r28:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rp:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ro:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:ro:"
           class="_textbox_1b2vd_5"
           autocomplete="off"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rn:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rg:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rf:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rf:"
           class="_textbox_1b2vd_5 _textbox_large_1b2vd_22"
           autocomplete="off"
           value
    >
    <div id="textFieldErrorId-:re:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
